// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`js-fire arrow function helpText 1`] = `
"USAGE:
	node arrow-function.js  --number=<number>
"
`;

exports[`js-fire function helpText 1`] = `
"USAGE:
	node function.js  --number=20
"
`;

exports[`js-fire helpText 1`] = `
"USAGE:
	node multi-args.js  --a=3.141592653589793  --b=20  --noop=false  --randomString=hiii"
`;

exports[`js-fire object helpText 1`] = `
"USAGE:
	node object.js 

DESCRIPTION: 
	I am a math machine


COMMANDS:

	half <flags> --number=<number> 
	double <flags> --number=<number> 
	add <flags> --n1=3.141592653589793  --n2=<n2> 

	misc
		year <flags>
		brand <flags>
		hello <flags> --name=<name>
"
`;

exports[`js-fire object helpText with subcommand 1`] = `
"USAGE:
	node object.js double --number=<number>
"
`;
